Add githook on phpcs

--- a/composer.json
+++ b/composer.json
@@ -59,7 +59,7 @@
     "extra": {
         "hooks": {
             "pre-commit": [
-                "composer phpcs"
+                "make phpcs"
             ]
         }
     }
