Add git in fpm image

--- a/docker/fpm/Dockerfile
+++ b/docker/fpm/Dockerfile
@@ -1,7 +1,7 @@
 FROM php:7.4.4-fpm-alpine
 COPY --from=composer:1.10.1 /usr/bin/composer /usr/bin/composer
 
-RUN apk --no-cache add postgresql-dev \
+RUN apk --no-cache add git postgresql-dev \
     && docker-php-ext-configure pgsql \
     && docker-php-ext-install pgsql pdo_pgsql \
     && mv "$PHP_INI_DIR/php.ini-development" "$PHP_INI_DIR/php.ini"
